# android-knowledge-base-rag-mcp

./: .env.example  .gitignore  COSTS.md  LICENSE  README.md  USAGE.md  package-lock.json  package.json
knowledge-base/: LICENSE.md  index.md
knowledge-base/.vitepress/: config.mts  sidebar.ts
knowledge-base/.vitepress/data/: knowledge.data.ts
knowledge-base/.vitepress/theme/: custom.css  index.ts
knowledge-base/android-framework/view-system/: view-event-dispatch.md
knowledge-base/android-interview/nowcoder-2024-2026/: 00-scope-quality-and-sources.md  01-frequency-map-and-priority.md  02-android-framework-ui-performance.md  03-java-kotlin-concurrency-jvm.md  04-network-data-crossplatform-engineering.md  05-project-drill-system-design.md  06-algorithms-interview-training.md
knowledge-base/computer-science/concurrency/: kotlin-coroutine-suspension-and-resumption.md  process-thread-coroutine.md
knowledge-base/八股/Android高级/: 00-2026时效性审校说明.md  01-Activity与四大组件.md  02-Handler-View-RecyclerView-Fragment-WebView.md  03-Bitmap-架构-Binder-内存与性能.md  04-Window-系统启动-APK-序列化-ART.md  06-过时点-回答模板与历史索引.md  (+1 more)
knowledge-base/简历解释/: android-compose-skin-framework.md
mcp-server/: README.md  pyproject.toml
mcp-server/examples/: claude_desktop_config.json  codex-config.toml
mcp-server/src/android_kb_mcp/: __init__.py  cli.py  config.py  embeddings.py  errors.py  factory.py  models.py  repository.py  server.py  service.py  text.py  vector_store.py
mcp-server/tests/: conftest.py  test_chroma_store.py  test_config.py  test_embeddings.py  test_server_contract.py  test_service.py
(+2 files in other folders)
